infra/k8s/bootstrap/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: aws-nlb-config
    namespace: envoy-gateway-system
---

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cluster-gateway
  namespace: envoy-gateway-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: eg
  listeners:
    - name: backend-http
      hostname: "backend.mikekim1032.shop"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: backend-https
      hostname: "backend.mikekim1032.shop"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: backend-mikekim1032-tls
      allowedRoutes:
        namespaces:
          from: All
#    - name: argocd-http
#      hostname: "argocd.mikekim1032.shop"
#      port: 80
#      protocol: HTTP
#      allowedRoutes:
#        namespaces:
#          from: All
#    - name: argocd-https
#      hostname: "argocd.mikekim1032.shop"
#      protocol: HTTPS
#      port: 443
#      tls:
#        mode: Terminate
#        certificateRefs:
#          - name: argocd-mikekim1032-tls
#      allowedRoutes:
#        namespaces:
#          from: All
