infra/k8s/bootstrap/https-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-https-redirect
  namespace: envoy-gateway-system
spec:
  parentRefs:
    - name: cluster-gateway
      namespace: envoy-gateway-system
      sectionName: backend-http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-https-redirect
  namespace: envoy-gateway-system
spec:
  parentRefs:
    - name: cluster-gateway
      namespace: envoy-gateway-system
      sectionName: argocd-http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
